--- a/covid19-tracker/package.json
+++ b/covid19-tracker/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
+    "@types/google.visualization": "0.0.53",
+    "angular-google-charts": "^1.1.5",
     "ng2-google-charts": "^6.1.0",
     "ngx-bootstrap": "^6.1.0",
     "rxjs": "~6.5.4",
@@ -30,9 +32,9 @@
     "@angular/cli": "~9.0.3",
     "@angular/compiler-cli": "~9.0.2",
     "@angular/language-service": "~9.0.2",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.12.56",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
